option(RAKNET_SAMPLE_AutopatcherClient "" ON)
option(RAKNET_SAMPLE_AutopatcherClientRestarter "" ON)
option(RAKNET_SAMPLE_AutopatcherServer "" ON)
option(RAKNET_SAMPLE_AutoPatcherServer_MySQL "" ON)
option(RAKNET_SAMPLE_BigPacketTest "" ON)
option(RAKNET_SAMPLE_BurstTest "" ON)
option(RAKNET_SAMPLE_Chat_Example "" ON)
option(RAKNET_SAMPLE_CloudClient "" ON)
option(RAKNET_SAMPLE_CloudServer "" ON)
option(RAKNET_SAMPLE_CloudTest "" ON)
option(RAKNET_SAMPLE_CommandConsoleClient "" ON)
option(RAKNET_SAMPLE_CommandConsoleServer "" ON)
option(RAKNET_SAMPLE_ComprehensivePCGame "" ON)
option(RAKNET_SAMPLE_ComprehensiveTest "" ON)
option(RAKNET_SAMPLE_CrashReporter "" ON)
option(RAKNET_SAMPLE_CrossConnectionTest "" ON)
option(RAKNET_SAMPLE_DirectoryDeltaTransfer "" ON)
option(RAKNET_SAMPLE_Dropped_Connection_Test "" ON)
option(RAKNET_SAMPLE_Encryption "" ON)
option(RAKNET_SAMPLE_FCMHost "" ON)
option(RAKNET_SAMPLE_FCMHostSimultaneous "" ON)
option(RAKNET_SAMPLE_FCMVerifiedJoinSimultaneous "" ON)
option(RAKNET_SAMPLE_FileListTransfer "" ON)
option(RAKNET_SAMPLE_Flow_Control_Test "" ON)
option(RAKNET_SAMPLE_Fully_Connected_Mesh "" ON)
option(RAKNET_SAMPLE_LANServerDiscovery "" ON)
option(RAKNET_SAMPLE_Lobby2Client "" ON)
option(RAKNET_SAMPLE_MasterServer "" ON)
option(RAKNET_SAMPLE_MessageFilter "" ON)
option(RAKNET_SAMPLE_MessageSizeTest "" ON)
option(RAKNET_SAMPLE_NATCompleteClient "" ON)
option(RAKNET_SAMPLE_NATCompleteServer "" ON)
option(RAKNET_SAMPLE_OfflineMessagesTest "" ON)
option(RAKNET_SAMPLE_PacketLogger "" ON)
option(RAKNET_SAMPLE_PHPDirectoryServer2 "" ON)
option(RAKNET_SAMPLE_Ping "" ON)
option(RAKNET_SAMPLE_RackspaceConsole "" ON)
option(RAKNET_SAMPLE_RakVoice "" ON)
option(RAKNET_SAMPLE_RakVoiceDSound "" ON)
option(RAKNET_SAMPLE_RakVoiceFMOD "" ON)
option(RAKNET_SAMPLE_Reliable_Ordered_Test "" ON)
option(RAKNET_SAMPLE_RelayPluginTest "" ON)
option(RAKNET_SAMPLE_ReplicaManager3 "" ON)
option(RAKNET_SAMPLE_Router2 "" ON)
option(RAKNET_SAMPLE_RPC3 "" ON)
option(RAKNET_SAMPLE_RPC4 "" ON)
option(RAKNET_SAMPLE_SendEmail "" ON)
option(RAKNET_SAMPLE_ServerClientTest2 "" ON)
option(RAKNET_SAMPLE_StatisticsHistoryTest "" ON)
option(RAKNET_SAMPLE_TeamManager "" ON)
option(RAKNET_SAMPLE_TestDLL "" ON)
option(RAKNET_SAMPLE_Tests "" ON)
option(RAKNET_SAMPLE_ThreadTest "" ON)
option(RAKNET_SAMPLE_Timestamping "" ON)
option(RAKNET_SAMPLE_TitleValidationDB_PostgreSQL "" ON)
option(RAKNET_SAMPLE_TwoWayAuthentication "" ON)
option(RAKNET_SAMPLE_UDPForwarder "" ON)

if(RAKNET_SAMPLE_AutopatcherClient)
    add_subdirectory("AutopatcherClient")
endif()
if(RAKNET_SAMPLE_AutopatcherClientRestarter)
    add_subdirectory("AutopatcherClientRestarter")
endif()
if(RAKNET_SAMPLE_AutopatcherServer)
    add_subdirectory("AutopatcherServer")
endif()
if(RAKNET_SAMPLE_AutoPatcherServer_MySQL)
    add_subdirectory("AutoPatcherServer_MySQL")
endif()
if(RAKNET_SAMPLE_BigPacketTest)
    add_subdirectory("BigPacketTest")
endif()
if(RAKNET_SAMPLE_BurstTest)
    add_subdirectory("BurstTest")
endif()
if(RAKNET_SAMPLE_Chat_Example)
    add_subdirectory("Chat Example")
endif()
if(RAKNET_SAMPLE_CloudClient)
    add_subdirectory("CloudClient")
endif()
if(RAKNET_SAMPLE_CloudServer)
    add_subdirectory("CloudServer")
endif()
if(RAKNET_SAMPLE_CloudTest)
    add_subdirectory("CloudTest")
endif()
if(RAKNET_SAMPLE_CommandConsoleClient)
    add_subdirectory("CommandConsoleClient")
endif()
if(RAKNET_SAMPLE_CommandConsoleServer)
    add_subdirectory("CommandConsoleServer")
endif()
if(RAKNET_SAMPLE_ComprehensivePCGame)
    add_subdirectory("ComprehensivePCGame")
endif()
if(RAKNET_SAMPLE_ComprehensiveTest)
    add_subdirectory("ComprehensiveTest")
endif()
if(RAKNET_SAMPLE_CrashReporter)
    add_subdirectory("CrashReporter")
endif()
if(RAKNET_SAMPLE_CrossConnectionTest)
    add_subdirectory("CrossConnectionTest")
endif()
if(RAKNET_SAMPLE_DirectoryDeltaTransfer)
    add_subdirectory("DirectoryDeltaTransfer")
endif()
if(RAKNET_SAMPLE_Dropped_Connection_Test)
    add_subdirectory("Dropped Connection Test")
endif()
if(RAKNET_SAMPLE_Encryption)
    add_subdirectory("Encryption")
endif()
if(RAKNET_SAMPLE_FCMHost)
    add_subdirectory("FCMHost")
endif()
if(RAKNET_SAMPLE_FCMHostSimultaneous)
    add_subdirectory("FCMHostSimultaneous")
endif()
if(RAKNET_SAMPLE_FCMVerifiedJoinSimultaneous)
    add_subdirectory("FCMVerifiedJoinSimultaneous")
endif()
if(RAKNET_SAMPLE_FileListTransfer)
    add_subdirectory("FileListTransfer")
endif()
if(RAKNET_SAMPLE_Flow_Control_Test)
    add_subdirectory("Flow Control Test")
endif()
if(RAKNET_SAMPLE_Fully_Connected_Mesh)
    add_subdirectory("Fully Connected Mesh")
endif()
if(RAKNET_SAMPLE_LANServerDiscovery)
    add_subdirectory("LANServerDiscovery")
endif()
if(RAKNET_SAMPLE_Lobby2Client)
    add_subdirectory("Lobby2Client")
endif()
if(RAKNET_SAMPLE_MasterServer)
    add_subdirectory("MasterServer")
endif()
if(RAKNET_SAMPLE_MessageFilter)
    add_subdirectory("MessageFilter")
endif()
if(RAKNET_SAMPLE_MessageSizeTest)
    add_subdirectory("MessageSizeTest")
endif()
if(RAKNET_SAMPLE_NATCompleteClient)
    add_subdirectory("NATCompleteClient")
endif()
if(RAKNET_SAMPLE_NATCompleteServer)
    add_subdirectory("NATCompleteServer")
endif()
if(RAKNET_SAMPLE_OfflineMessagesTest)
    add_subdirectory("OfflineMessagesTest")
endif()
if(RAKNET_SAMPLE_PacketLogger)
    add_subdirectory("PacketLogger")
endif()
if(RAKNET_SAMPLE_PHPDirectoryServer2)
    add_subdirectory("PHPDirectoryServer2")
endif()
if(RAKNET_SAMPLE_Ping)
    add_subdirectory("Ping")
endif()
if(RAKNET_SAMPLE_RackspaceConsole)
    add_subdirectory("RackspaceConsole")
endif()
if(RAKNET_SAMPLE_RakVoice)
    add_subdirectory("RakVoice")
endif()
if(RAKNET_SAMPLE_RakVoiceDSound)
    add_subdirectory("RakVoiceDSound")
endif()
if(RAKNET_SAMPLE_RakVoiceFMOD)
    add_subdirectory("RakVoiceFMOD")
endif()
if(RAKNET_SAMPLE_Reliable_Ordered_Test)
    add_subdirectory("Reliable Ordered Test")
endif()
if(RAKNET_SAMPLE_RelayPluginTest)
    add_subdirectory("RelayPluginTest")
endif()
if(RAKNET_SAMPLE_ReplicaManager3)
    add_subdirectory("ReplicaManager3")
endif()
if(RAKNET_SAMPLE_Router2)
    add_subdirectory("Router2")
endif()
if(RAKNET_SAMPLE_RPC3)
    add_subdirectory("RPC3")
endif()
if(RAKNET_SAMPLE_RPC4)
    add_subdirectory("RPC4")
endif()
if(RAKNET_SAMPLE_SendEmail)
    add_subdirectory("SendEmail")
endif()
if(RAKNET_SAMPLE_ServerClientTest2)
    add_subdirectory("ServerClientTest2")
endif()
if(RAKNET_SAMPLE_StatisticsHistoryTest)
    add_subdirectory("StatisticsHistoryTest")
endif()
if(RAKNET_SAMPLE_TeamManager)
    add_subdirectory("TeamManager")
endif()
if(RAKNET_SAMPLE_TestDLL)
    add_subdirectory("TestDLL")
endif()
if(RAKNET_SAMPLE_Tests)
    add_subdirectory("Tests")
endif()
if(RAKNET_SAMPLE_ThreadTest)
    add_subdirectory("ThreadTest")
endif()
if(RAKNET_SAMPLE_Timestamping)
    add_subdirectory("Timestamping")
endif()
if(RAKNET_SAMPLE_TitleValidationDB_PostgreSQL)
    add_subdirectory("TitleValidationDB_PostgreSQL")
endif()
if(RAKNET_SAMPLE_TwoWayAuthentication)
    add_subdirectory("TwoWayAuthentication")
endif()
if(RAKNET_SAMPLE_UDPForwarder)
    add_subdirectory("UDPForwarder")
endif()
