file(GLOB SOURCES CONFIGURE_DEPENDS *.cpp *.h)
add_executable(tests ${SOURCES})
target_link_libraries(tests PRIVATE RakNet)

add_subdirectory("BigPacketTest")
add_subdirectory("BurstTest")
add_subdirectory("CloudTest")
add_subdirectory("ComprehensiveTest")
add_subdirectory("CrossConnectionTest")
add_subdirectory("Dropped Connection Test")
add_subdirectory("Flow Control Test")
add_subdirectory("LoopbackPerformanceTest")
add_subdirectory("MessageSizeTest")
add_subdirectory("OfflineMessagesTest")
add_subdirectory("RankingServerDBTest")
add_subdirectory("RelayPluginTest")
add_subdirectory("Reliable Ordered Test")
add_subdirectory("ServerClientTest2")
add_subdirectory("StatisticsHistoryTest")
add_subdirectory("TestDLL")
add_subdirectory("ThreadTest")
