file(GLOB ALL_CPP_SRCS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB ALL_HEADER_SRCS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

add_library(LibAutopatcher STATIC ${ALL_CPP_SRCS} ${ALL_HEADER_SRCS})
target_include_directories(LibAutopatcher PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(LibAutopatcher PUBLIC RakNet LibBZip2)
set_target_properties(LibAutopatcher PROPERTIES FOLDER "DependentExtensions")
if(MSVC)
    target_compile_options(LibAutopatcher PRIVATE /W0)
else()
    target_compile_options(LibAutopatcher PRIVATE -w)
endif()

if(RAKNET_EXTENSION_USEMYSQL AND TARGET LibMySQLInterface)
    add_subdirectory(AutopatcherMySQLRepository)
endif()

if(RAKNET_EXTENSION_USEPOSTGRESQL AND TARGET LibPostgreSQLInterface)
    add_subdirectory(AutopatcherPostgreRepository)
endif()
