add_executable(ChatServer "Chat Example Server.cpp")
target_link_libraries(ChatServer PRIVATE RakNet)
set_target_properties(ChatServer PROPERTIES FOLDER "Samples")
if(MSVC)
    target_compile_definitions(ChatServer PRIVATE _CRT_SECURE_NO_DEPRECATE _CRT_NONSTDC_NO_DEPRECATE)
    target_compile_options(ChatServer PRIVATE /W0)
else()
    target_compile_options(ChatServer PRIVATE -w)
endif()

add_executable(ChatClient "Chat Example Client.cpp")
target_link_libraries(ChatClient PRIVATE RakNet)
set_target_properties(ChatClient PROPERTIES FOLDER "Samples")
if(MSVC)
    target_compile_definitions(ChatClient PRIVATE _CRT_SECURE_NO_DEPRECATE _CRT_NONSTDC_NO_DEPRECATE)
    target_compile_options(ChatClient PRIVATE /W0)
else()
    target_compile_options(ChatClient PRIVATE -w)
endif()
